--- a/scipy-notebook/Dockerfile-gpu
+++ b/scipy-notebook/Dockerfile-gpu
@@ -1,47 +1,51 @@
 # Copyright (c) Jupyter Development Team.
 # Distributed under the terms of the Modified BSD License.
-# ARG BASE_CONTAINER=jupyter/minimal-notebook
-# FROM $BASE_CONTAINER
-FROM mdjaere/minimal-notebook-gpu
+ARG BASE_CONTAINER=mdjaere/minimal-notebook-gpu
+FROM $BASE_CONTAINER
 
 LABEL maintainer="Jupyter Project <jupyter@googlegroups.com>"
 
 USER root
 
-# ffmpeg for matplotlib anim
+# ffmpeg for matplotlib anim & dvipng for latex labels
 RUN apt-get update && \
-    apt-get install -y --no-install-recommends ffmpeg && \
+    apt-get install -y --no-install-recommends ffmpeg dvipng && \
     rm -rf /var/lib/apt/lists/*
 
 USER $NB_UID
 
 # Install Python 3 packages
 RUN conda install --quiet --yes \
-    'beautifulsoup4=4.8.*' \
+    'beautifulsoup4=4.9.*' \
     'conda-forge::blas=*=openblas' \
-    'bokeh=1.3*' \
-    'cloudpickle=1.2*' \
-    'cython=0.29*' \
-    'dask=2.2.*' \
-    'dill=0.3*' \
-    'h5py=2.9*' \
-    'hdf5=1.10*' \
-    'ipywidgets=7.5*' \
-    'matplotlib-base=3.1.*' \
-    'numba=0.45*' \
-    'numexpr=2.6*' \
-    'pandas=0.25*' \
-    'patsy=0.5*' \
-    'protobuf=3.9.*' \
-    'scikit-image=0.15*' \
-    'scikit-learn=0.21*' \
-    'scipy=1.3*' \
-    'seaborn=0.9*' \
-    'sqlalchemy=1.3*' \
-    'statsmodels=0.10*' \
-    'sympy=1.4*' \
+    'bokeh=2.0.*' \
+    'bottleneck=1.3.*' \
+    'cloudpickle=1.4.*' \
+    'cython=0.29.*' \
+    'dask=2.15.*' \
+    'dill=0.3.*' \
+    'h5py=2.10.*' \
+    'hdf5=1.10.*' \
+    'ipywidgets=7.5.*' \
+    'ipympl=0.5.*'\
+    'matplotlib-base=3.2.*' \
+    # numba update to 0.49 fails resolving deps.
+    'numba=0.48.*' \
+    'numexpr=2.7.*' \
+    'pandas=1.0.*' \
+    'patsy=0.5.*' \
+    'protobuf=3.11.*' \
+    'pytables=3.6.*' \
+    'scikit-image=0.16.*' \
+    'scikit-learn=0.22.*' \
+    'scipy=1.4.*' \
+    'seaborn=0.10.*' \
+    'sqlalchemy=1.3.*' \
+    'statsmodels=0.11.*' \
+    'sympy=1.5.*' \
     'vincent=0.4.*' \
-    'xlrd' \
+    'widgetsnbextension=3.5.*'\
+    'xlrd=1.2.*' \
     && \
     conda clean --all -f -y && \
     # Activate ipywidgets extension in the environment that runs the notebook server
@@ -49,11 +53,12 @@ RUN conda install --quiet --yes \
     # Also activate ipywidgets extension for JupyterLab
     # Check this URL for most recent compatibilities
     # https://github.com/jupyter-widgets/ipywidgets/tree/master/packages/jupyterlab-manager
-    jupyter labextension install @jupyter-widgets/jupyterlab-manager@^1.0.1 --no-build && \
-    jupyter labextension install jupyterlab_bokeh@1.0.0 --no-build && \
-    jupyter lab build && \
+    jupyter labextension install @jupyter-widgets/jupyterlab-manager@^2.0.0 --no-build && \
+    jupyter labextension install @bokeh/jupyter_bokeh@^2.0.0 --no-build && \
+    jupyter labextension install jupyter-matplotlib@^0.7.2 --no-build && \
+    jupyter lab build -y && \
+    jupyter lab clean -y && \
     npm cache clean --force && \
-    rm -rf $CONDA_DIR/share/jupyter/lab/staging && \
     rm -rf /home/$NB_USER/.cache/yarn && \
     rm -rf /home/$NB_USER/.node-gyp && \
     fix-permissions $CONDA_DIR && \
