--- a/octave-notebook/Dockerfile-gpu
+++ b/octave-notebook/Dockerfile-gpu
@@ -31,15 +31,16 @@ WORKDIR /home/$NB_USER
 
 RUN octave --no-gui --eval "pkg install -verbose -forge -auto netcdf" \
      && octave --no-gui --eval "pkg install -verbose -forge -auto io" \
-     && octave --no-gui --eval "pkg install -verbose -forge -auto statistics"
+     && octave --no-gui --eval "pkg install -verbose -forge -auto statistics" \
+     && octave --no-gui --eval "pkg install -verbose -forge -auto financial"
 
-RUN git clone https://github.com/ymatsunaga/mdtoolbox.git
+# RUN git clone https://github.com/ymatsunaga/mdtoolbox.git
 
-WORKDIR /home/$NB_USER/mdtoolbox
-RUN octave --no-gui --eval "make"
+# WORKDIR /home/$NB_USER/mdtoolbox
+# RUN octave --no-gui --eval "make"
 
-# path setting for interactive octave use
-RUN echo addpath\(\'/home/$NB_USER/mdtoolbox/mdtoolbox\'\)\; >/home/$NB_USER/.octaverc
+# # path setting for interactive octave use
+# RUN echo addpath\(\'/home/$NB_USER/mdtoolbox/mdtoolbox\'\)\; >/home/$NB_USER/.octaverc
 
 RUN pip --no-cache-dir install octave_kernel && \
      rm -rf /home/$NB_USER/.local && \
