--- a/octave-notebook/Dockerfile-gpu
+++ b/octave-notebook/Dockerfile-gpu
@@ -63,10 +63,10 @@ RUN apt-get update \
      && rm -rf /var/lib/apt/lists/*
 
 RUN wget https://ftpmirror.gnu.org/octave/octave-5.2.0.tar.gz && \
-     tar -xzf octave-5.2.0.tar.gz && \
-     cd octave-5.2.0
+     tar -xzf octave-5.2.0.tar.gz
 
-RUN mkdir .build && \
+RUN cd /src/octave-5.2.0 && \
+     mkdir .build && \
      cd .build && \
      ./../configure --prefix=$HOME/my_octave && \
      make -j2  && \
