--- a/octave-notebook/Dockerfile-gpu
+++ b/octave-notebook/Dockerfile-gpu
@@ -86,7 +86,7 @@ ENV OMP_NUM_THREADS 8
 RUN apt-get update \
      && apt-get -yq install \
      # less \
-     make \
+     # make \
      gnuplot \
      # libnetcdf-dev \
      # octave \
@@ -94,9 +94,9 @@ RUN apt-get update \
      # git \
      && apt-get clean \
      && rm -rf /var/lib/apt/lists/*
-     
-COPY --from=compile-image /src/.build /src/
-WORKDIR /src
+
+COPY --from=compile-image /src/octave-5.2.0/.build /tmp/octave-build/
+WORKDIR /tmp/octave-build/
 RUN run-octave --version
 RUN make install
 
