--- a/octave-notebook/Dockerfile-gpu
+++ b/octave-notebook/Dockerfile-gpu
@@ -80,8 +80,8 @@ LABEL maintainer="Martin Jaere <martin.jaere11@imperial.ac.uk>"
 # MAINTAINER Yasuhiro Matsunaga <ymatsunaga@riken.jp>
 
 USER root
-ENV DEBIAN_FRONTEND noninteractive
-ENV OMP_NUM_THREADS 8
+# ENV DEBIAN_FRONTEND noninteractive
+# ENV OMP_NUM_THREADS 8
 
 RUN apt-get update \
      && apt-get -yq install \
@@ -95,8 +95,8 @@ RUN apt-get update \
      && apt-get clean \
      && rm -rf /var/lib/apt/lists/*
 
-COPY --from=compile-image /src/octave-5.2.0/.build /tmp/octave-build/
-WORKDIR /tmp/octave-build/
+COPY --from=compile-image /src/octave-5.2.0/.build /tmp/
+WORKDIR /tmp/.build
 RUN run-octave --version
 RUN make install
 
