--- a/octave-notebook/Dockerfile-gpu
+++ b/octave-notebook/Dockerfile-gpu
@@ -83,6 +83,12 @@ USER root
 # ENV DEBIAN_FRONTEND noninteractive
 # ENV OMP_NUM_THREADS 8
 
+COPY --from=compile-image /src/octave-5.2.0/.build /tmp/
+WORKDIR /tmp/.build
+RUN ls -lah
+RUN run-octave --version
+RUN make install
+
 RUN apt-get update \
      && apt-get -yq install \
      # less \
@@ -94,11 +100,6 @@ RUN apt-get update \
      # git \
      && apt-get clean \
      && rm -rf /var/lib/apt/lists/*
-
-COPY --from=compile-image /src/octave-5.2.0/.build /tmp/
-WORKDIR /tmp/.build
-RUN run-octave --version
-RUN make install
 
 ## MDToolbox https://github.com/ymatsunaga/mdtoolbox
 # path setting for octave_kernel in jupyter
