add components to octave build

--- a/octave-notebook/Dockerfile-gpu
+++ b/octave-notebook/Dockerfile-gpu
@@ -83,11 +83,11 @@ USER root
 # ENV DEBIAN_FRONTEND noninteractive
 # ENV OMP_NUM_THREADS 8
 
-WORKDIR /tmp/octave-build
-COPY --from=compile-image /src/octave-5.2.0/.build/ .
+WORKDIR /src/octave-5.2.0/
+COPY --from=compile-image /src/octave-5.2.0/ .
 RUN ls -lah
-RUN run-octave --version
-RUN make install
+# RUN ./run-octave --version/
+WORKDIR /src/octave-5.2.0/.build
 
 RUN apt-get update \
      && apt-get -yq install \
@@ -97,9 +97,66 @@ RUN apt-get update \
      # libnetcdf-dev \
      # octave \
      # liboctave-dev \
-     # git \
+     # git \     
+     # gcc \
+     # g++ \
+     # gfortran \
+     # make \
+     # libblas-dev \
+     # liblapack-dev \
+     # libpcre3-dev \
+     # libarpack2-dev \
+     # libcurl4-gnutls-dev \
+     # epstool \
+     # libfftw3-dev \
+     # transfig \
+     # libfltk1.3-dev \
+     # libfontconfig1-dev \
+     # libfreetype6-dev \
+     # libgl2ps-dev \
+     # libglpk-dev \
+     # libreadline-dev \
+     # gnuplot-x11 \
+     # libgraphicsmagick++1-dev \
+     # libhdf5-serial-dev \
+     # openjdk-8-jdk \
+     # libsndfile1-dev \
+     # llvm-dev \
+     # lpr \
+     texinfo \
+     # libgl1-mesa-dev \
+     # libosmesa6-dev \
+     # pstoedit \
+     # portaudio19-dev \
+     libqhull-dev \
+     # libqrupdate-dev \
+     # libqscintilla2-dev \
+     # libsuitesparse-dev \
+     # texlive \
+     # texlive-generic-recommended \
+     # libxft-dev \
+     # zlib1g-dev \
+     # autoconf \
+     # automake \
+     # bison \
+     # flex \
+     # gperf \
+     # gzip \
+     # icoutils \
+     # librsvg2-bin \
+     # libtool \
+     # perl \
+     # rsync \
+     # tar \
+     # qtbase5-dev \
+     # qttools5-dev \
+     # qttools5-dev-tools \
+     # libqscintilla2-qt5-dev \
      && apt-get clean \
      && rm -rf /var/lib/apt/lists/*
+
+RUN make install
+
 
 ## MDToolbox https://github.com/ymatsunaga/mdtoolbox
 # path setting for octave_kernel in jupyter
