--- a/octave-notebook/Dockerfile-gpu
+++ b/octave-notebook/Dockerfile-gpu
@@ -150,7 +150,7 @@ RUN apt-get update \
      # tar \
      qtbase5-dev \
      qttools5-dev \
-     qttools5-dev-tools \
+     # qttools5-dev-tools \
      libqscintilla2-qt5-dev \
      && apt-get clean \
      && rm -rf /var/lib/apt/lists/*
