--- a/octave-notebook/Dockerfile-gpu
+++ b/octave-notebook/Dockerfile-gpu
@@ -119,7 +119,7 @@ RUN apt-get update \
      # gnuplot-x11 \
      libgraphicsmagick++1-dev \
      libhdf5-serial-dev \
-     # openjdk-8-jdk \
+     openjdk-8-jdk \
      libsndfile1-dev \
      llvm-dev \
      # lpr \
@@ -155,7 +155,8 @@ RUN apt-get update \
      && apt-get clean \
      && rm -rf /var/lib/apt/lists/*
 
-RUN make install
+RUN make check && \
+     make install
 
 ## MDToolbox https://github.com/ymatsunaga/mdtoolbox
 # path setting for octave_kernel in jupyter
