--- a/octave-notebook/Dockerfile-gpu
+++ b/octave-notebook/Dockerfile-gpu
@@ -152,6 +152,7 @@ RUN apt-get update \
      qttools5-dev \
      # qttools5-dev-tools \
      libqscintilla2-qt5-dev \
+     gawk \
      && apt-get clean \
      && rm -rf /var/lib/apt/lists/*
 
