--- a/octave-notebook/Dockerfile-gpu
+++ b/octave-notebook/Dockerfile-gpu
@@ -85,8 +85,6 @@ USER root
 
 WORKDIR /src/octave-5.2.0/
 COPY --from=compile-image /src/octave-5.2.0/ .
-RUN ls -lah
-# RUN ./run-octave --version/
 WORKDIR /src/octave-5.2.0/.build
 
 RUN apt-get update \
@@ -94,65 +92,65 @@ RUN apt-get update \
      # less \
      # make \
      gnuplot \
-     libnetcdf-dev \
-     # octave \
-     liboctave-dev \
-     # git \     
-     # gcc \
-     # g++ \
-     # gfortran \
-     # make \
+     # libnetcdf-dev \
+     ##### octave \
+     # liboctave-dev \
+     # git \
+     # gawk \
+     gcc \
+     g++ \
+     gfortran \
+     make \
      libblas-dev \
      liblapack-dev \
      libpcre3-dev \
      libarpack2-dev \
      libcurl4-gnutls-dev \
-     # epstool \
+     epstool \
      libfftw3-dev \
-     # transfig \
+     transfig \
      libfltk1.3-dev \
      libfontconfig1-dev \
      libfreetype6-dev \
      libgl2ps-dev \
      libglpk-dev \
      libreadline-dev \
-     # gnuplot-x11 \
+     gnuplot-x11 \
      libgraphicsmagick++1-dev \
      libhdf5-serial-dev \
      openjdk-8-jdk \
      libsndfile1-dev \
      llvm-dev \
-     # lpr \
-     # texinfo \
+     lpr \
+     texinfo \
      libgl1-mesa-dev \
      libosmesa6-dev \
-     # pstoedit \
+     pstoedit \
      portaudio19-dev \
      libqhull-dev \
      libqrupdate-dev \
      libqscintilla2-dev \
      libsuitesparse-dev \
-     # texlive \
-     # texlive-generic-recommended \
+     texlive \
+     texlive-generic-recommended \
      libxft-dev \
      zlib1g-dev \
-     # autoconf \
-     # automake \
-     # bison \
-     # flex \
-     # gperf \
-     # gzip \
-     # icoutils \
-     # librsvg2-bin \
-     # libtool \
-     # perl \
-     # rsync \
-     # tar \
+     autoconf \
+     automake \
+     bison \
+     flex \
+     gperf \
+     gzip \
+     icoutils \
+     librsvg2-bin \
+     libtool \
+     perl \
+     rsync \
+     tar \
      qtbase5-dev \
      qttools5-dev \
-     # qttools5-dev-tools \
+     qttools5-dev-tools \
      libqscintilla2-qt5-dev \
-     gawk \
      && apt-get clean \
      && rm -rf /var/lib/apt/lists/*
 
